--- a/app/views/workers/_worker.html.slim
+++ b/app/views/workers/_worker.html.slim
@@ -1,3 +1,3 @@
 tr
-  -worker.attributes.values.each do |value|
-    td=value
+  -worker.attributes.values.each_with_index do |value, index|
+      td=value
