--- a/app/views/workers/index.html.slim
+++ b/app/views/workers/index.html.slim
@@ -2,7 +2,7 @@
   table.table
     thead
       tr
-        -Worker.attribute_names.each do |key|
+        -Worker.attribute_names.each_with_index do |key, index|
           th=key
     tbody
       =render @workers
